// LINT: LEGACY_NAMES
syntax = "proto3";

package google.test.remote.ui.matcher;

option java_package = "androidx.test.espresso.proto.matcher";

import "google/protobuf/any.proto";

message IsFocusableProto {
  string id = 1;
}

message IsTouchableProto {
  string id = 1;
}

message IsDialogProto {
  string id = 1;
}

message IsSystemAlertWindowProto {
  string id = 1;
}

message IsPlatformPopupProto {
  string id = 1;
}

message WithDecorViewProto {
  string id = 1;
  google.protobuf.Any decorViewMatcher = 2;
}

message HasWindowFocusProto {
  string id = 1;
}

message HasWindowLayoutParamsProto {
  string id = 1;
}

message IsSubwindowOfCurrentActivityProto {
  string id = 1;
}
